# RAMP

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg
config/example_config/: search_01.yaml
results/: visualize_network.ipynb
run_scripts/: run_from_config.py  run_qm_from_config.py
src/RAMP/: run_func.py  run_qm_calcs.py  run_search.py
src/RAMP/filters/: filter.py
src/RAMP/intermediate_enumeration/: enumerate_intermediates.py  perform_actions.py
src/RAMP/model/: predict.py
src/RAMP/model/local_min_classification_model/pretrained_models/: pretrained_random_split.pt
src/RAMP/model/rxn_enthalpy_regression_model/pretrained_models/: pretrained_random_split.pt
src/RAMP/nnp_calculations/: aimnet2sph.py  barrier_calculate.py  enthalpy_calculate.py  reaction_conformers.py
src/RAMP/qm_calcs/: orca_ts_opt.py
src/RAMP/utils/: calculations.py  converter.py  file_write.py  molecule.py  molecule_utils.py  multinode.py  multiproc.py  template_slurm_script.sh
test/: test_enumeration.py  test_nnp_calcs.py
