[metadata]
name = RAMP
version = 0.0.1
license = MIT
description = Reaction Analysis with Machine Learned Potentials
long_description = file: README.md
author = Nicholas Casetti
author_email = ncasetti@mit.edu
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.extras_require]
dev =
    jupyterlab

[options.packages.find]
where=src
